// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: containers/Auth/PassChange Background: Scenario: Changing the password when the link is valid Given changePassword request is expected When the component tree is mounted When I enter invalid password into password field When I enter invalid password into passwordCheck field When I submit the form When changePassword request fails with 400, error: "Password must be" Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value="invalid"
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
      <prop-error-text>
        <span>
          Password must be at least 8 characters long
        </span>
      </prop-error-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value="invalid"
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Changing the password when the link is valid Given changePassword request is expected When the component tree is mounted When I enter invalid password into password field When I enter invalid password into passwordCheck field When I submit the form When changePassword request fails with 400, error: "Password must be" When I enter password into password field When I enter password into passwordCheck field When I submit the form When changePassword request succeeds Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  text-align: center;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <p
    class="c2"
  >
    <span>
      Your password has been changed.
    </span>
  </p>
  <p
    class="c2"
  >
    <span>
      Now you can 
      <component-link
        to="/signin"
      >
        <span>
          sign in
        </span>
      </component-link>
       using your new password.
    </span>
  </p>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Trying to change the password when the link is invalid Given changePassword request is expected When the component tree is mounted Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="false"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Trying to change the password when the link is invalid Given changePassword request is expected When the component tree is mounted When I submit the form Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
      <prop-error-text>
        <span>
          Enter a password
        </span>
      </prop-error-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value=""
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
      <prop-error-text>
        <span>
          Enter the password again
        </span>
      </prop-error-text>
    </component-text-field>
    <div
      class="c2"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Trying to change the password when the link is invalid Given changePassword request is expected When the component tree is mounted When I submit the form When I enter password into password field When I enter invalid password into passwordCheck field When I enter password into passwordCheck field When I submit the form When changePassword request fails with 400, error: "Invalid link." Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  color: #f44336;
  margin-top: 24px;
  text-align: center;
}

.c2 a {
  color: inherit !important;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <p
      class="c2"
    >
      <span>
        This reset link is invalid. Try 
        <component-link
          to="/reset_password"
        >
          <span>
            resetting password
          </span>
        </component-link>
         again.
      </span>
    </p>
    <div
      class="c3"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Trying to change the password when the link is invalid Given changePassword request is expected When the component tree is mounted When I submit the form When I enter password into password field When I enter invalid password into passwordCheck field When I enter password into passwordCheck field When I submit the form When changePassword request fails with 404, error: "User not found." Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  color: #f44336;
  margin-top: 24px;
  text-align: center;
}

.c2 a {
  color: inherit !important;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <p
      class="c2"
    >
      <span>
        This reset link is invalid. Try 
        <component-link
          to="/reset_password"
        >
          <span>
            resetting password
          </span>
        </component-link>
         again.
      </span>
    </p>
    <div
      class="c3"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;

exports[`Feature: containers/Auth/PassChange Background: Scenario: Trying to change the password when the link is invalid Given changePassword request is expected When the component tree is mounted When I submit the form When I enter password into password field When I enter invalid password into passwordCheck field When I enter password into passwordCheck field When I submit the form When changePassword request fails with 500 Then the rendered markup should match the snapshot 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  max-width: 280px;
  min-height: calc(100vh - 300px);
  width: 100%;
}

.c1 {
  text-align: center;
}

.c2 {
  color: #f44336;
  margin-top: 24px;
  text-align: center;
}

.c2 a {
  color: inherit !important;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 32px;
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    <span>
      Change Password
    </span>
  </h1>
  <form>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="password"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          New password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <component-text-field
      disabled="false"
      fullwidth="true"
      name="passwordCheck"
      type="password"
      value="valid"
    >
      <prop-floating-label-text>
        <span>
          Re-enter your new password
        </span>
      </prop-floating-label-text>
    </component-text-field>
    <p
      class="c2"
    >
      <span>
        Something went wrong. Try again later.
      </span>
    </p>
    <div
      class="c3"
    >
      <component-raised-button
        disabled="true"
        primary="true"
        type="submit"
      >
        <prop-label>
          <span>
            Change Password
          </span>
        </prop-label>
      </component-raised-button>
    </div>
  </form>
</div>
`;
